[package]
name = "serde-semver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
semver = { version = "1.0.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.64"
