[package]
name = "serde-semver"
description = "Serde-compatible version checker"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/serde-semver/"
repository = "https://github.com/jerry73204/serde-semver.git"
homepage = "https://github.com/jerry73204/serde-semver"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.69"
