[package]
name = "serde-semver-derive"
description = "Derive macro for serde-compatible version checker"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/serde-semver/"
repository = "https://github.com/jerry73204/serde-semver.git"
homepage = "https://github.com/jerry73204/serde-semver"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.33"
quote = "1.0.10"
syn = "1.0.82"
semver = { version = "1.0.4", features = ["serde"] }
